After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779100 - Cannot check checkboxes in new clear data dialog when searching
Cannot check checkboxes in new clear data dialog when searching
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Preferences
3.23.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-22 22:49 UTC by Michael Catanzaro
Modified: 2017-02-26 09:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
clear-data-dialog: Convert filter iterators to treestore iterators (1.25 KB, patch)
2017-02-26 09:18 UTC, Carlos Garcia Campos
committed Details | Review

Description Michael Catanzaro 2017-02-22 22:49:02 UTC
I want to delete localstorage for a particular website. When I search for it in the new clear data dialog, I cannot check any of the checkboxes that appear until I exit search mode, making it extremely difficult to use the dialog to clear data for a particular site.
Comment 1 Carlos Garcia Campos 2017-02-26 09:18:12 UTC
Created attachment 346739 [details] [review]
clear-data-dialog: Convert filter iterators to treestore iterators