clear-data-dialog: Convert filter iterators to treestore iterators

https://bugzilla.gnome.org/show_bug.cgi?id=779100